Change redirect URL to external thank you page

--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
             });
             
             // Redirect to thank you page
-            window.location.href = 'thankyou.html';
+            window.location.href = 'https://mighty-coyote-ab34e0.instawp.xyz/';
         });
 
         // CTA Button Click Tracking
