Update redirect URL in index.html

--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
             });
             
             // Redirect to thank you page
-            window.location.href = 'https://mighty-coyote-ab34e0.instawp.xyz/';
+            window.location.href = 'https://sarthakrath608.github.io/shotify-merchandise/';
         });
 
         // CTA Button Click Tracking
