Change redirect method to use anchor element

--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
             });
             
             // Redirect to thank you page
-            window.location.href = 'https://sarthakrath608.github.io/index1/';
+            a.href = 'https://sarthakrath608.github.io/index1/';
         });
 
         // CTA Button Click Tracking
