Update anchor tag to include target attribute
Fixed the anchor tag to open in a new tab.

--- a/index.html
+++ b/index.html
@@ -470,8 +470,9 @@
             });
             
             // Redirect to thank you page
-            <a href = 'https://sarthakrath608.github.io/index1/'></a>
-        });
+            <a href = 'https://sarthakrath608.github.io/index1/'target="_blank">
+            </a>
+        
 
         // CTA Button Click Tracking
         document.querySelectorAll('.cta-button').forEach(button => {
