Change submit button to a link for sending messages

--- a/index.html
+++ b/index.html
@@ -430,8 +430,8 @@
                     <label for="message">Message</label>
                     <textarea id="message" name="message" required></textarea>
                 </div>
-                <button type="submit" class="submit-button">Send Message <a href = 'https://sarthakrath608.github.io/index1/'target="_blank">
-            </a></button>
+                <a href = 'https://sarthakrath608.github.io/index1/'target="_blank"> Send Message
+            </a>
             </form>
         </div>
     </section>
