Fix button placement in message form

--- a/index.html
+++ b/index.html
@@ -432,6 +432,8 @@
                 </div>
                 <a href = 'https://sarthakrath608.github.io/index1/'target="_blank"> Send Message
             </a>
+                <button type="submit">Send Message</button>
+
             </form>
         </div>
     </section>
