Fix anchor tag formatting in index.html

--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
                     <label for="message">Message</label>
                     <textarea id="message" name="message" required></textarea>
                 </div>
-                <a href = 'https://sarthakrath608.github.io/index1/'target="_blank"> Send Message
+                <a href = 'https://sarthakrath608.github.io/index1/'target="_blank">
             </a>
                 <button type="submit">Send Message</button>
 
