Update contact form with action and method

--- a/index.html
+++ b/index.html
@@ -417,24 +417,30 @@
         <h2 class="section-title" style="color: white;">Get In Touch</h2>
         <p>Ready to bring your vision to life? Let's talk about your next project.</p>
         <div class="contact-form">
-            <form id="contactForm">
-                <div class="form-group">
-                    <label for="name">Name</label>
-                    <input type="text" id="name" name="name" required>
-                </div>
-                <div class="form-group">
-                    <label for="email">Email</label>
-                    <input type="email" id="email" name="email" required>
-                </div>
-                <div class="form-group">
-                    <label for="message">Message</label>
-                    <textarea id="message" name="message" required></textarea>
-                </div>
-                <a href = 'https://sarthakrath608.github.io/index1/'target="_blank">
-            </a>
-                <button type="submit">Send Message</button>
+            <form 
+    id="contactForm" 
+    action="https://sarthakrath608.github.io/index1/" 
+    method="GET" 
+    target="_blank"
+>
+    <div class="form-group">
+        <label for="name">Name</label>
+        <input type="text" id="name" name="name" required>
+    </div>
 
-            </form>
+    <div class="form-group">
+        <label for="email">Email</label>
+        <input type="email" id="email" name="email" required>
+    </div>
+
+    <div class="form-group">
+        <label for="message">Message</label>
+        <textarea id="message" name="message" required></textarea>
+    </div>
+
+    <button type="submit">Send Message</button>
+</form>
+
         </div>
     </section>
 
