Add call button to contact form in index.html

--- a/index.html
+++ b/index.html
@@ -439,6 +439,8 @@
     </div>
 
     <button type="submit">Send Message</button>
+    <a href="tel:+919059495552" class="call-button">📞 Call Us Directly</a>
+ 
 </form>
 
         </div>
