--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
     </div>
 
     <button type="submit">Send Message</button>
-    <a href="tel:+919059495552" class="call-button">📞 Call Us Directly</a><button type="call">Call Us Directly</button>
+    <a href="tel:+919059495552" class="call-button">📞 Call Us Directly</a>
  
 </form>
 
